// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-radial-loading #render should render component as expected (1) 1`] = `
<gux-radial-loading-beta>
  <div aria-busy="true" class="gux-modal gux-spinner-container">
    <div class="gux-spin-circle"></div>
  </div>
</gux-radial-loading-beta>
`;

exports[`gux-radial-loading #render should render component as expected (2) 1`] = `
<gux-radial-loading-beta context="modal">
  <div aria-busy="true" class="gux-modal gux-spinner-container">
    <div class="gux-spin-circle"></div>
  </div>
</gux-radial-loading-beta>
`;

exports[`gux-radial-loading #render should render component as expected (3) 1`] = `
<gux-radial-loading-beta context="full-page">
  <div aria-busy="true" class="gux-full-page gux-spinner-container">
    <div class="gux-spin-circle"></div>
  </div>
</gux-radial-loading-beta>
`;

exports[`gux-radial-loading #render should render component as expected (4) 1`] = `
<gux-radial-loading-beta context="input">
  <div aria-busy="true" class="gux-input gux-spinner-container">
    <div class="gux-spin-circle"></div>
  </div>
</gux-radial-loading-beta>
`;
